--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/img/slid1.png" class="d-block w-100" alt="...">
+              <!-- <img src="/img/slid1.png" class="d-block w-100" alt="..."> -->
+              <img src="/img/how_it_work.jpg"  alt="how it work">
             </div>
             <div class="carousel-item">
               <img src="/img/slid2.jpg" class="d-block w-100" alt="...">
