--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/slid1.png" class="d-block w-100" alt="...">
+              <img src="../img/slid1.png" class="d-block w-100" alt="add dote in slinder img ">
             </div>
             <div class="carousel-item">
               <img src="/img/slid2.jpg" class="d-block w-100" alt="...">
